More synonyms added

--- a/public/index.html
+++ b/public/index.html
@@ -671,19 +671,19 @@
       <li><div><img src="graphics/emojis/candy.png"> :<span class="name">candy</span>:</div></li>
       <li><div><img src="graphics/emojis/lollipop.png"> :<span class="name">lollipop</span>:</div></li>
       <li><div><img src="graphics/emojis/honey_pot.png"> :<span class="name">honey_pot</span>:</div></li>
-      <li><div><img src="graphics/emojis/apple.png"> :<span class="name">apple</span>:</div></li>
-      <li><div><img src="graphics/emojis/green_apple.png"> :<span class="name">green_apple</span>:</div></li>
-      <li><div><img src="graphics/emojis/tangerine.png"> :<span class="name">tangerine</span>:</div></li>
-      <li><div><img src="graphics/emojis/lemon.png"> :<span class="name">lemon</span>:</div></li>
-      <li><div><img src="graphics/emojis/cherries.png"> :<span class="name">cherries</span>:</div></li>
-      <li><div><img src="graphics/emojis/grapes.png"> :<span class="name">grapes</span>:</div></li>
-      <li><div><img src="graphics/emojis/watermelon.png"> :<span class="name">watermelon</span>:</div></li>
-      <li><div><img src="graphics/emojis/strawberry.png"> :<span class="name">strawberry</span>:</div></li>
-      <li><div><img src="graphics/emojis/peach.png"> :<span class="name">peach</span>:</div></li>
-      <li><div><img src="graphics/emojis/melon.png"> :<span class="name">melon</span>:</div></li>
-      <li><div><img src="graphics/emojis/banana.png"> :<span class="name">banana</span>:</div></li>
-      <li><div><img src="graphics/emojis/pear.png"> :<span class="name">pear</span>:</div></li>
-      <li><div><img src="graphics/emojis/pineapple.png"> :<span class="name">pineapple</span>:</div></li>
+      <li><div><img src="graphics/emojis/apple.png"> :<span class="name" data-alternative-name="fruit">apple</span>:</div></li>
+      <li><div><img src="graphics/emojis/green_apple.png"> :<span class="name" data-alternative-name="fruit">green_apple</span>:</div></li>
+      <li><div><img src="graphics/emojis/tangerine.png"> :<span class="name" data-alternative-name="fruit">tangerine</span>:</div></li>
+      <li><div><img src="graphics/emojis/lemon.png"> :<span class="name" data-alternative-name="fruit">lemon</span>:</div></li>
+      <li><div><img src="graphics/emojis/cherries.png"> :<span class="name" data-alternative-name="fruit">cherries</span>:</div></li>
+      <li><div><img src="graphics/emojis/grapes.png"> :<span class="name" data-alternative-name="fruit">grapes</span>:</div></li>
+      <li><div><img src="graphics/emojis/watermelon.png"> :<span class="name" data-alternative-name="fruit">watermelon</span>:</div></li>
+      <li><div><img src="graphics/emojis/strawberry.png"> :<span class="name" data-alternative-name="fruit">strawberry</span>:</div></li>
+      <li><div><img src="graphics/emojis/peach.png"> :<span class="name" data-alternative-name="fruit">peach</span>:</div></li>
+      <li><div><img src="graphics/emojis/melon.png"> :<span class="name" data-alternative-name="fruit">melon</span>:</div></li>
+      <li><div><img src="graphics/emojis/banana.png"> :<span class="name" data-alternative-name="fruit">banana</span>:</div></li>
+      <li><div><img src="graphics/emojis/pear.png"> :<span class="name" data-alternative-name="fruit">pear</span>:</div></li>
+      <li><div><img src="graphics/emojis/pineapple.png"> :<span class="name" data-alternative-name="fruit">pineapple</span>:</div></li>
       <li><div><img src="graphics/emojis/sweet_potato.png"> :<span class="name">sweet_potato</span>:</div></li>
       <li><div><img src="graphics/emojis/eggplant.png"> :<span class="name">eggplant</span>:</div></li>
       <li><div><img src="graphics/emojis/tomato.png"> :<span class="name">tomato</span>:</div></li>
@@ -691,20 +691,20 @@
     </ul>
     <h2>Places</h2>
     <ul class="places emojis" id="emoji-places">
-      <li><div><img src="graphics/emojis/house.png"> :<span class="name">house</span>:</div></li>
-      <li><div><img src="graphics/emojis/house_with_garden.png"> :<span class="name">house_with_garden</span>:</div></li>
-      <li><div><img src="graphics/emojis/school.png"> :<span class="name">school</span>:</div></li>
-      <li><div><img src="graphics/emojis/office.png"> :<span class="name">office</span>:</div></li>
-      <li><div><img src="graphics/emojis/post_office.png"> :<span class="name">post_office</span>:</div></li>
-      <li><div><img src="graphics/emojis/hospital.png"> :<span class="name">hospital</span>:</div></li>
-      <li><div><img src="graphics/emojis/bank.png"> :<span class="name">bank</span>:</div></li>
-      <li><div><img src="graphics/emojis/convenience_store.png"> :<span class="name">convenience_store</span>:</div></li>
-      <li><div><img src="graphics/emojis/love_hotel.png"> :<span class="name">love_hotel</span>:</div></li>
-      <li><div><img src="graphics/emojis/hotel.png"> :<span class="name">hotel</span>:</div></li>
-      <li><div><img src="graphics/emojis/wedding.png"> :<span class="name">wedding</span>:</div></li>
-      <li><div><img src="graphics/emojis/church.png"> :<span class="name">church</span>:</div></li>
-      <li><div><img src="graphics/emojis/department_store.png"> :<span class="name">department_store</span>:</div></li>
-      <li><div><img src="graphics/emojis/european_post_office.png"> :<span class="name">european_post_office</span>:</div></li>
+      <li><div><img src="graphics/emojis/house.png"> :<span class="name" data-alternative-name="building">house</span>:</div></li>
+      <li><div><img src="graphics/emojis/house_with_garden.png"> :<span class="name" data-alternative-name="building">house_with_garden</span>:</div></li>
+      <li><div><img src="graphics/emojis/school.png"> :<span class="name" data-alternative-name="building">school</span>:</div></li>
+      <li><div><img src="graphics/emojis/office.png"> :<span class="name" data-alternative-name="building">office</span>:</div></li>
+      <li><div><img src="graphics/emojis/post_office.png"> :<span class="name" data-alternative-name="building">post_office</span>:</div></li>
+      <li><div><img src="graphics/emojis/hospital.png"> :<span class="name" data-alternative-name="building">hospital</span>:</div></li>
+      <li><div><img src="graphics/emojis/bank.png"> :<span class="name" data-alternative-name="building">bank</span>:</div></li>
+      <li><div><img src="graphics/emojis/convenience_store.png"> :<span class="name" data-alternative-name="building">convenience_store</span>:</div></li>
+      <li><div><img src="graphics/emojis/love_hotel.png"> :<span class="name" data-alternative-name="building">love_hotel</span>:</div></li>
+      <li><div><img src="graphics/emojis/hotel.png"> :<span class="name" data-alternative-name="building">hotel</span>:</div></li>
+      <li><div><img src="graphics/emojis/wedding.png"> :<span class="name" data-alternative-name="building">wedding</span>:</div></li>
+      <li><div><img src="graphics/emojis/church.png"> :<span class="name" data-alternative-name="building">church</span>:</div></li>
+      <li><div><img src="graphics/emojis/department_store.png"> :<span class="name" data-alternative-name="building">department_store</span>:</div></li>
+      <li><div><img src="graphics/emojis/european_post_office.png"> :<span class="name" data-alternative-name="building">european_post_office</span>:</div></li>
       <li><div><img src="graphics/emojis/city_sunrise.png"> :<span class="name">city_sunrise</span>:</div></li>
       <li><div><img src="graphics/emojis/city_sunset.png"> :<span class="name">city_sunset</span>:</div></li>
       <li><div><img src="graphics/emojis/japanese_castle.png"> :<span class="name">japanese_castle</span>:</div></li>
@@ -855,7 +855,7 @@
       <li><div><img src="graphics/emojis/cinema.png"> :<span class="name" data-alternative-name="movie">cinema</span>:</div></li>
       <li><div><img src="graphics/emojis/koko.png"> :<span class="name">koko</span>:</div></li>
       <li><div><img src="graphics/emojis/signal_strength.png"> :<span class="name">signal_strength</span>:</div></li>
-      <li><div><img src="graphics/emojis/u5272.png"> :<span class="name">u5272</span>:</div></li>
+      <li><div><img src="graphics/emojis/u5272.png"> :<span class="name" >u5272</span>:</div></li>
       <li><div><img src="graphics/emojis/u5408.png"> :<span class="name">u5408</span>:</div></li>
       <li><div><img src="graphics/emojis/u55b6.png"> :<span class="name">u55b6</span>:</div></li>
       <li><div><img src="graphics/emojis/u6307.png"> :<span class="name">u6307</span>:</div></li>
@@ -908,19 +908,19 @@
       <li><div><img src="graphics/emojis/mobile_phone_off.png"> :<span class="name">mobile_phone_off</span>:</div></li>
       <li><div><img src="graphics/emojis/chart.png"> :<span class="name" data-alternative-name="yen">chart</span>:</div></li>
       <li><div><img src="graphics/emojis/currency_exchange.png"> :<span class="name">currency_exchange</span>:</div></li>
-      <li><div><img src="graphics/emojis/aries.png"> :<span class="name">aries</span>:</div></li>
-      <li><div><img src="graphics/emojis/taurus.png"> :<span class="name">taurus</span>:</div></li>
-      <li><div><img src="graphics/emojis/gemini.png"> :<span class="name">gemini</span>:</div></li>
-      <li><div><img src="graphics/emojis/cancer.png"> :<span class="name">cancer</span>:</div></li>
-      <li><div><img src="graphics/emojis/leo.png"> :<span class="name">leo</span>:</div></li>
-      <li><div><img src="graphics/emojis/virgo.png"> :<span class="name">virgo</span>:</div></li>
-      <li><div><img src="graphics/emojis/libra.png"> :<span class="name">libra</span>:</div></li>
-      <li><div><img src="graphics/emojis/scorpius.png"> :<span class="name">scorpius</span>:</div></li>
-      <li><div><img src="graphics/emojis/sagittarius.png"> :<span class="name">sagittarius</span>:</div></li>
-      <li><div><img src="graphics/emojis/capricorn.png"> :<span class="name">capricorn</span>:</div></li>
-      <li><div><img src="graphics/emojis/aquarius.png"> :<span class="name">aquarius</span>:</div></li>
-      <li><div><img src="graphics/emojis/pisces.png"> :<span class="name">pisces</span>:</div></li>
-      <li><div><img src="graphics/emojis/ophiuchus.png"> :<span class="name">ophiuchus</span>:</div></li>
+      <li><div><img src="graphics/emojis/aries.png"> :<span class="name" data-alternative-name="zodiac">aries</span>:</div></li>
+      <li><div><img src="graphics/emojis/taurus.png"> :<span class="name" data-alternative-name="zodiac">taurus</span>:</div></li>
+      <li><div><img src="graphics/emojis/gemini.png"> :<span class="name" data-alternative-name="zodiac">gemini</span>:</div></li>
+      <li><div><img src="graphics/emojis/cancer.png"> :<span class="name" data-alternative-name="zodiac">cancer</span>:</div></li>
+      <li><div><img src="graphics/emojis/leo.png"> :<span class="name" data-alternative-name="zodiac">leo</span>:</div></li>
+      <li><div><img src="graphics/emojis/virgo.png"> :<span class="name" data-alternative-name="zodiac">virgo</span>:</div></li>
+      <li><div><img src="graphics/emojis/libra.png"> :<span class="name" data-alternative-name="zodiac">libra</span>:</div></li>
+      <li><div><img src="graphics/emojis/scorpius.png"> :<span class="name" data-alternative-name="zodiac">scorpius</span>:</div></li>
+      <li><div><img src="graphics/emojis/sagittarius.png"> :<span class="name" data-alternative-name="zodiac">sagittarius</span>:</div></li>
+      <li><div><img src="graphics/emojis/capricorn.png"> :<span class="name" data-alternative-name="zodiac">capricorn</span>:</div></li>
+      <li><div><img src="graphics/emojis/aquarius.png"> :<span class="name" data-alternative-name="zodiac">aquarius</span>:</div></li>
+      <li><div><img src="graphics/emojis/pisces.png"> :<span class="name" data-alternative-name="zodiac">pisces</span>:</div></li>
+      <li><div><img src="graphics/emojis/ophiuchus.png"> :<span class="name" data-alternative-name="zodiac">ophiuchus</span>:</div></li>
       <li><div><img src="graphics/emojis/six_pointed_star.png"> :<span class="name">six_pointed_star</span>:</div></li>
       <li><div><img src="graphics/emojis/negative_squared_cross_mark.png"> :<span class="name">negative_squared_cross_mark</span>:</div></li>
       <li><div><img src="graphics/emojis/a.png"> :<span class="name">a</span>:</div></li>
@@ -933,30 +933,30 @@
       <li><div><img src="graphics/emojis/back.png"> :<span class="name">back</span>:</div></li>
       <li><div><img src="graphics/emojis/on.png"> :<span class="name">on</span>:</div></li>
       <li><div><img src="graphics/emojis/soon.png"> :<span class="name">soon</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock1.png"> :<span class="name">clock1</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock130.png"> :<span class="name">clock130</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock10.png"> :<span class="name">clock10</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock1030.png"> :<span class="name">clock1030</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock11.png"> :<span class="name">clock11</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock1130.png"> :<span class="name">clock1130</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock12.png"> :<span class="name" data-alternative-name="midnight, noon">clock12</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock1230.png"> :<span class="name">clock1230</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock2.png"> :<span class="name">clock2</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock230.png"> :<span class="name">clock230</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock3.png"> :<span class="name">clock3</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock330.png"> :<span class="name">clock330</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock4.png"> :<span class="name">clock4</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock430.png"> :<span class="name">clock430</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock5.png"> :<span class="name">clock5</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock530.png"> :<span class="name">clock530</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock6.png"> :<span class="name">clock6</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock630.png"> :<span class="name">clock630</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock7.png"> :<span class="name">clock7</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock730.png"> :<span class="name">clock730</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock8.png"> :<span class="name">clock8</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock830.png"> :<span class="name">clock830</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock9.png"> :<span class="name">clock9</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock930.png"> :<span class="name">clock930</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock1.png"> :<span class="name" data-alternative-name="time">clock1</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock130.png"> :<span class="name" data-alternative-name="time">clock130</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock10.png"> :<span class="name" data-alternative-name="time">clock10</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock1030.png"> :<span class="name" data-alternative-name="time">clock1030</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock11.png"> :<span class="name" data-alternative-name="time">clock11</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock1130.png"> :<span class="name" data-alternative-name="time">clock1130</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock12.png"> :<span class="name" data-alternative-name="midnight, noon, time">clock12</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock1230.png"> :<span class="name" data-alternative-name="time">clock1230</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock2.png"> :<span class="name" data-alternative-name="time">clock2</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock230.png"> :<span class="name" data-alternative-name="time">clock230</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock3.png"> :<span class="name" data-alternative-name="time">clock3</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock330.png"> :<span class="name" data-alternative-name="time">clock330</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock4.png"> :<span class="name" data-alternative-name="time">clock4</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock430.png"> :<span class="name" data-alternative-name="time">clock430</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock5.png"> :<span class="name" data-alternative-name="time">clock5</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock530.png"> :<span class="name" data-alternative-name="time">clock530</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock6.png"> :<span class="name" data-alternative-name="time">clock6</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock630.png"> :<span class="name" data-alternative-name="time">clock630</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock7.png"> :<span class="name" data-alternative-name="time">clock7</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock730.png"> :<span class="name" data-alternative-name="time">clock730</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock8.png"> :<span class="name" data-alternative-name="time">clock8</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock830.png"> :<span class="name" data-alternative-name="time">clock830</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock9.png"> :<span class="name" data-alternative-name="time">clock9</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock930.png"> :<span class="name" data-alternative-name="time">clock930</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_dollar_sign.png"> :<span class="name">heavy_dollar_sign</span>:</div></li>
       <li><div><img src="graphics/emojis/copyright.png"> :<span class="name">copyright</span>:</div></li>
       <li><div><img src="graphics/emojis/registered.png"> :<span class="name">registered</span>:</div></li>
