--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
       <li><div><img src="graphics/emojis/kissing.png"> :<span class="name">kissing</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_smiling_eyes.png"> :<span class="name">kissing_smiling_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue.png"> :<span class="name">stuck_out_tongue</span>:</div></li>
-      <li><div><img src="graphics/emojis/sleeping.png"> :<span class="name">sleeping</span>:</div></li>
+      <li><div><img src="graphics/emojis/sleeping.png"> :<span class="name" data-alternative-name="asleep">sleeping</span>:</div></li>
       <li><div><img src="graphics/emojis/worried.png"> :<span class="name" data-alternative-name="frustrated">worried</span>:</div></li>
       <li><div><img src="graphics/emojis/frowning.png"> :<span class="name">frowning</span>:</div></li>
       <li><div><img src="graphics/emojis/anguished.png"> :<span class="name">anguished</span>:</div></li>
@@ -158,7 +158,7 @@
       <li><div><img src="graphics/emojis/sob.png"> :<span class="name" data-alternative-name="sad, unhappy">sob</span>:</div></li>
       <li><div><img src="graphics/emojis/joy.png"> :<span class="name" data-alternative-name="happy">joy</span>:</div></li>
       <li><div><img src="graphics/emojis/astonished.png"> :<span class="name">astonished</span>:</div></li>
-      <li><div><img src="graphics/emojis/scream.png"> :<span class="name" data-alternative-name="halloween, scary">scream</span>:</div></li>
+      <li><div><img src="graphics/emojis/scream.png"> :<span class="name" data-alternative-name="halloween, scary, scared, terrified">scream</span>:</div></li>
       <li><div><img src="graphics/emojis/neckbeard.png"> :<span class="name">neckbeard</span>:</div></li>
       <li><div><img src="graphics/emojis/tired_face.png"> :<span class="name">tired_face</span>:</div></li>
       <li><div><img src="graphics/emojis/angry.png"> :<span class="name">angry</span>:</div></li>
