--- a/public/index.html
+++ b/public/index.html
@@ -452,7 +452,7 @@
       <li><div><img src="graphics/emojis/cd.png"> :<span class="name">cd</span>:</div></li>
       <li><div><img src="graphics/emojis/dvd.png"> :<span class="name">dvd</span>:</div></li>
       <li><div><img src="graphics/emojis/floppy_disk.png"> :<span class="name">floppy_disk</span>:</div></li>
-      <li><div><img src="graphics/emojis/camera.png"> :<span class="name">camera</span>:</div></li>
+      <li><div><img src="graphics/emojis/camera.png"> :<span class="name">camera</span>:</div></li>gam
       <li><div><img src="graphics/emojis/video_camera.png"> :<span class="name">video_camera</span>:</div></li>
       <li><div><img src="graphics/emojis/movie_camera.png"> :<span class="name">movie_camera</span>:</div></li>
       <li><div><img src="graphics/emojis/computer.png"> :<span class="name">computer</span>:</div></li>
@@ -580,14 +580,14 @@
       <li><div><img src="graphics/emojis/hearts.png"> :<span class="name" data-alternative-name="cards, suit">hearts</span>:</div></li>
       <li><div><img src="graphics/emojis/clubs.png"> :<span class="name" data-alternative-name="cards, suit">clubs</span>:</div></li>
       <li><div><img src="graphics/emojis/diamonds.png"> :<span class="name" data-alternative-name="cards, suit">diamonds</span>:</div></li>
-      <li><div><img src="graphics/emojis/gem.png"> :<span class="name">gem</span>:</div></li>
-      <li><div><img src="graphics/emojis/ring.png"> :<span class="name">ring</span>:</div></li>
+      <li><div><img src="graphics/emojis/gem.png"> :<span class="name" data-alternative-name="jewelery">gem</span>:</div></li>
+      <li><div><img src="graphics/emojis/ring.png"> :<span class="name" data-alternative-name="jewelery">ring</span>:</div></li>
       <li><div><img src="graphics/emojis/trophy.png"> :<span class="name">trophy</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_score.png"> :<span class="name">musical_score</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_keyboard.png"> :<span class="name">musical_keyboard</span>:</div></li>
       <li><div><img src="graphics/emojis/violin.png"> :<span class="name">violin</span>:</div></li>
       <li><div><img src="graphics/emojis/space_invader.png"> :<span class="name">space_invader</span>:</div></li>
-      <li><div><img src="graphics/emojis/video_game.png"> :<span class="name">video_game</span>:</div></li>
+      <li><div><img src="graphics/emojis/video_game.png"> :<span class="name" data-alternative-name="controller">video_game</span>:</div></li>
       <li><div><img src="graphics/emojis/black_joker.png"> :<span class="name">black_joker</span>:</div></li>
       <li><div><img src="graphics/emojis/flower_playing_cards.png"> :<span class="name" data-alternative-name="floral">flower_playing_cards</span>:</div></li>
       <li><div><img src="graphics/emojis/game_die.png"> :<span class="name">game_die</span>:</div></li>
