--- a/public/index.html
+++ b/public/index.html
@@ -275,11 +275,11 @@
       <li><div><img src="graphics/emojis/crying_cat_face.png"> :<span class="name" data-alternative-name="animal, sad">crying_cat_face</span>:</div></li>
       <li><div><img src="graphics/emojis/joy_cat.png"> :<span class="name" data-alternative-name="animal, happy">joy_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/pouting_cat.png"> :<span class="name" data-alternative-name="animal, sad, unhappy, angry">pouting_cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/japanese_ogre.png"> :<span class="name" data-alternative-name="namahage">japanese_ogre</span>:</div></li>
+      <li><div><img src="graphics/emojis/japanese_ogre.png"> :<span class="name" data-alternative-name="namahage, demon">japanese_ogre</span>:</div></li>
       <li><div><img src="graphics/emojis/japanese_goblin.png"> :<span class="name" data-alternative-name="tengu">japanese_goblin</span>:</div></li>
-      <li><div><img src="graphics/emojis/see_no_evil.png"> :<span class="name">see_no_evil</span>:</div></li>
-      <li><div><img src="graphics/emojis/hear_no_evil.png"> :<span class="name">hear_no_evil</span>:</div></li>
-      <li><div><img src="graphics/emojis/speak_no_evil.png"> :<span class="name">speak_no_evil</span>:</div></li>
+      <li><div><img src="graphics/emojis/see_no_evil.png"> :<span class="name" data-alternative-name="monkey">see_no_evil</span>:</div></li>
+      <li><div><img src="graphics/emojis/hear_no_evil.png"> :<span class="name" data-alternative-name="monkey">hear_no_evil</span>:</div></li>
+      <li><div><img src="graphics/emojis/speak_no_evil.png"> :<span class="name" data-alternative-name="monkey">speak_no_evil</span>:</div></li>
       <li><div><img src="graphics/emojis/guardsman.png"> :<span class="name">guardsman</span>:</div></li>
       <li><div><img src="graphics/emojis/skull.png"> :<span class="name">skull</span>:</div></li>
       <li><div><img src="graphics/emojis/feet.png"> :<span class="name">feet</span>:</div></li>
@@ -318,11 +318,11 @@
       <li><div><img src="graphics/emojis/cyclone.png"> :<span class="name" data-alternative-name="weather">cyclone</span>:</div></li>
       <li><div><img src="graphics/emojis/foggy.png"> :<span class="name" data-alternative-name="weather">foggy</span>:</div></li>
       <li><div><img src="graphics/emojis/ocean.png"> :<span class="name">ocean</span>:</div></li>
-      <li><div><img src="graphics/emojis/cat.png"> :<span class="name" data-alternative-name="animal">cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/dog.png"> :<span class="name" data-alternative-name="animal">dog</span>:</div></li>
+      <li><div><img src="graphics/emojis/cat.png"> :<span class="name" data-alternative-name="animal, kitten">cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/dog.png"> :<span class="name" data-alternative-name="animal, puppy">dog</span>:</div></li>
       <li><div><img src="graphics/emojis/mouse.png"> :<span class="name" data-alternative-name="animal">mouse</span>:</div></li>
-      <li><div><img src="graphics/emojis/hamster.png"> :<span class="name" data-alternative-name="animal">hamster</span>:</div></li>
-      <li><div><img src="graphics/emojis/rabbit.png"> :<span class="name" data-alternative-name="animal">rabbit</span>:</div></li>
+      <li><div><img src="graphics/emojis/hamster.png"> :<span class="name" data-alternative-name="animal, gerbil">hamster</span>:</div></li>
+      <li><div><img src="graphics/emojis/rabbit.png"> :<span class="name" data-alternative-name="animal, bunny">rabbit</span>:</div></li>
       <li><div><img src="graphics/emojis/wolf.png"> :<span class="name" data-alternative-name="animal,dog">wolf</span>:</div></li>
       <li><div><img src="graphics/emojis/frog.png"> :<span class="name" data-alternative-name="animal">frog</span>:</div></li>
       <li><div><img src="graphics/emojis/tiger.png"> :<span class="name" data-alternative-name="animal">tiger</span>:</div></li>
@@ -341,17 +341,17 @@
       <li><div><img src="graphics/emojis/elephant.png"> :<span class="name" data-alternative-name="animal">elephant</span>:</div></li>
       <li><div><img src="graphics/emojis/panda_face.png"> :<span class="name" data-alternative-name="animal">panda_face</span>:</div></li>
       <li><div><img src="graphics/emojis/snake.png"> :<span class="name" data-alternative-name="animal,serpent">snake</span>:</div></li>
-      <li><div><img src="graphics/emojis/bird.png"> :<span class="name" data-alternative-name="animal">bird</span>:</div></li>
+      <li><div><img src="graphics/emojis/bird.png"> :<span class="name" data-alternative-name="animal, pigeon">bird</span>:</div></li>
       <li><div><img src="graphics/emojis/baby_chick.png"> :<span class="name" data-alternative-name="animal, bird">baby_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/hatched_chick.png"> :<span class="name" data-alternative-name="animal, bird">hatched_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/hatching_chick.png"> :<span class="name" data-alternative-name="animal, bird,egg">hatching_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/chicken.png"> :<span class="name" data-alternative-name="animal, bird">chicken</span>:</div></li>
       <li><div><img src="graphics/emojis/penguin.png"> :<span class="name" data-alternative-name="animal, bird">penguin</span>:</div></li>
       <li><div><img src="graphics/emojis/turtle.png"> :<span class="name" data-alternative-name="animal">turtle</span>:</div></li>
-      <li><div><img src="graphics/emojis/bug.png"> :<span class="name" data-alternative-name="animal">bug</span>:</div></li>
-      <li><div><img src="graphics/emojis/honeybee.png"> :<span class="name" data-alternative-name="animal">honeybee</span>:</div></li>
-      <li><div><img src="graphics/emojis/ant.png"> :<span class="name" data-alternative-name="animal">ant</span>:</div></li>
-      <li><div><img src="graphics/emojis/beetle.png"> :<span class="name" data-alternative-name="animal">beetle</span>:</div></li>
+      <li><div><img src="graphics/emojis/bug.png"> :<span class="name" data-alternative-name="animal, caterpillar">bug</span>:</div></li>
+      <li><div><img src="graphics/emojis/honeybee.png"> :<span class="name" data-alternative-name="animal, insect">honeybee</span>:</div></li>
+      <li><div><img src="graphics/emojis/ant.png"> :<span class="name" data-alternative-name="animal, insect">ant</span>:</div></li>
+      <li><div><img src="graphics/emojis/beetle.png"> :<span class="name" data-alternative-name="animal, ladybug, insect">beetle</span>:</div></li>
       <li><div><img src="graphics/emojis/snail.png"> :<span class="name" data-alternative-name="animal">snail</span>:</div></li>
       <li><div><img src="graphics/emojis/octopus.png"> :<span class="name" data-alternative-name="animal">octopus</span>:</div></li>
       <li><div><img src="graphics/emojis/tropical_fish.png"> :<span class="name" data-alternative-name="animal">tropical_fish</span>:</div></li>
@@ -364,7 +364,7 @@
       <li><div><img src="graphics/emojis/rat.png"> :<span class="name" data-alternative-name="animal">rat</span>:</div></li>
       <li><div><img src="graphics/emojis/water_buffalo.png"> :<span class="name" data-alternative-name="animal">water_buffalo</span>:</div></li>
       <li><div><img src="graphics/emojis/tiger2.png"> :<span class="name" data-alternative-name="animal">tiger2</span>:</div></li>
-      <li><div><img src="graphics/emojis/rabbit2.png"> :<span class="name" data-alternative-name="animal">rabbit2</span>:</div></li>
+      <li><div><img src="graphics/emojis/rabbit2.png"> :<span class="name" data-alternative-name="animal, bunny">rabbit2</span>:</div></li>
       <li><div><img src="graphics/emojis/dragon.png"> :<span class="name" data-alternative-name="animal">dragon</span>:</div></li>
       <li><div><img src="graphics/emojis/goat.png"> :<span class="name" data-alternative-name="animal">goat</span>:</div></li>
       <li><div><img src="graphics/emojis/rooster.png"> :<span class="name" data-alternative-name="animal">rooster</span>:</div></li>
@@ -379,11 +379,11 @@
       <li><div><img src="graphics/emojis/leopard.png"> :<span class="name" data-alternative-name="animal">leopard</span>:</div></li>
       <li><div><img src="graphics/emojis/cat2.png"> :<span class="name" data-alternative-name="animal">cat2</span>:</div></li>
       <li><div><img src="graphics/emojis/poodle.png"> :<span class="name" data-alternative-name="animal">poodle</span>:</div></li>
-      <li><div><img src="graphics/emojis/paw_prints.png"> :<span class="name" data-alternative-name="animal">paw_prints</span>:</div></li>
-      <li><div><img src="graphics/emojis/bouquet.png"> :<span class="name">bouquet</span>:</div></li>
+      <li><div><img src="graphics/emojis/paw_prints.png"> :<span class="name" data-alternative-name="animal, dog, cat">paw_prints</span>:</div></li>
+      <li><div><img src="graphics/emojis/bouquet.png"> :<span class="name" data-alternative-name="floral">bouquet</span>:</div></li>
       <li><div><img src="graphics/emojis/cherry_blossom.png"> :<span class="name" data-alternative-name="floral">cherry_blossom</span>:</div></li>
       <li><div><img src="graphics/emojis/tulip.png"> :<span class="name" data-alternative-name="floral">tulip</span>:</div></li>
-      <li><div><img src="graphics/emojis/four_leaf_clover.png"> :<span class="name">four_leaf_clover</span>:</div></li>
+      <li><div><img src="graphics/emojis/four_leaf_clover.png"> :<span class="name" data-alternative-name="lucky">four_leaf_clover</span>:</div></li>
       <li><div><img src="graphics/emojis/rose.png"> :<span class="name" data-alternative-name="floral">rose</span>:</div></li>
       <li><div><img src="graphics/emojis/sunflower.png"> :<span class="name" data-alternative-name="floral">sunflower</span>:</div></li>
       <li><div><img src="graphics/emojis/hibiscus.png"> :<span class="name" data-alternative-name="floral">hibiscus</span>:</div></li>
@@ -420,8 +420,8 @@
       <li><div><img src="graphics/emojis/earth_americas.png"> :<span class="name">earth_americas</span>:</div></li>
       <li><div><img src="graphics/emojis/earth_asia.png"> :<span class="name">earth_asia</span>:</div></li>
       <li><div><img src="graphics/emojis/volcano.png"> :<span class="name">volcano</span>:</div></li>
-      <li><div><img src="graphics/emojis/milky_way.png"> :<span class="name">milky_way</span>:</div></li>
-      <li><div><img src="graphics/emojis/partly_sunny.png"> :<span class="name" data-alternative-name="weather">partly_sunny</span>:</div></li>
+      <li><div><img src="graphics/emojis/milky_way.png"> :<span class="name" data-alternative-name="galaxy">milky_way</span>:</div></li>
+      <li><div><img src="graphics/emojis/partly_sunny.png"> :<span class="name" data-alternative-name="cloud, weather">partly_sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/octocat.png"> :<span class="name" data-alternative-name="github">octocat</span>:</div></li>
       <li><div><img src="graphics/emojis/squirrel.png"> :<span class="name" data-alternative-name="animal">squirrel</span>:</div></li>
     </ul>
