--- a/public/index.html
+++ b/public/index.html
@@ -858,14 +858,14 @@
       <li><div><img src="graphics/emojis/u5272.png"> :<span class="name" data-alternative-name="wari">u5272</span>:</div></li>
       <li><div><img src="graphics/emojis/u5408.png"> :<span class="name">u5408</span>:</div></li>
       <li><div><img src="graphics/emojis/u55b6.png"> :<span class="name" data-alternative-name="ying">u55b6</span>:</div></li>
-      <li><div><img src="graphics/emojis/u6307.png"> :<span class="name" data-alternative-name="zhǐ">u6307</span>:</div></li>
-      <li><div><img src="graphics/emojis/u6708.png"> :<span class="name">u6708</span>:</div></li>
-      <li><div><img src="graphics/emojis/u6709.png"> :<span class="name">u6709</span>:</div></li>
-      <li><div><img src="graphics/emojis/u6e80.png"> :<span class="name">u6e80</span>:</div></li>
-      <li><div><img src="graphics/emojis/u7121.png"> :<span class="name">u7121</span>:</div></li>
-      <li><div><img src="graphics/emojis/u7533.png"> :<span class="name">u7533</span>:</div></li>
-      <li><div><img src="graphics/emojis/u7a7a.png"> :<span class="name">u7a7a</span>:</div></li>
-      <li><div><img src="graphics/emojis/u7981.png"> :<span class="name">u7981</span>:</div></li>
+      <li><div><img src="graphics/emojis/u6307.png"> :<span class="name" data-alternative-name="zhǐ, zhi">u6307</span>:</div></li>
+      <li><div><img src="graphics/emojis/u6708.png"> :<span class="name" data-alternative-name="yuè, yue">u6708</span>:</div></li>
+      <li><div><img src="graphics/emojis/u6709.png"> :<span class="name" data-alternative-name="yǒu, you">u6709</span>:</div></li>
+      <li><div><img src="graphics/emojis/u6e80.png"> :<span class="name" data-alternative-name="mitsuru">u6e80</span>:</div></li>
+      <li><div><img src="graphics/emojis/u7121.png"> :<span class="name" data-alternative-name="wú, wu">u7121</span>:</div></li>
+      <li><div><img src="graphics/emojis/u7533.png"> :<span class="name" data-alternative-name="shēn, shen">u7533</span>:</div></li>
+      <li><div><img src="graphics/emojis/u7a7a.png"> :<span class="name" data-alternative-name="kōng, kong">u7a7a</span>:</div></li>
+      <li><div><img src="graphics/emojis/u7981.png"> :<span class="name" data-alternative-name="jìn, jin">u7981</span>:</div></li>
       <li><div><img src="graphics/emojis/sa.png"> :<span class="name">sa</span>:</div></li>
       <li><div><img src="graphics/emojis/restroom.png"> :<span class="name">restroom</span>:</div></li>
       <li><div><img src="graphics/emojis/mens.png"> :<span class="name">mens</span>:</div></li>
