added some names

--- a/public/index.html
+++ b/public/index.html
@@ -639,10 +639,10 @@
       <li><div><img src="graphics/emojis/tropical_drink.png"> :<span class="name">tropical_drink</span>:</div></li>
       <li><div><img src="graphics/emojis/wine_glass.png"> :<span class="name" data-alternative-name="drink alcohol">wine_glass</span>:</div></li>
       <li><div><img src="graphics/emojis/fork_and_knife.png"> :<span class="name">fork_and_knife</span>:</div></li>
-      <li><div><img src="graphics/emojis/pizza.png"> :<span class="name" data-alternative-name="food italian dairy">pizza</span>:</div></li>
+      <li><div><img src="graphics/emojis/pizza.png"> :<span class="name" data-alternative-name="food italian dairy, zza, pie">pizza</span>:</div></li>
       <li><div><img src="graphics/emojis/hamburger.png"> :<span class="name" data-alternative-name="food american meat">hamburger</span>:</div></li>
       <li><div><img src="graphics/emojis/fries.png"> :<span class="name" data-alternative-name="food american">fries</span>:</div></li>
-      <li><div><img src="graphics/emojis/poultry_leg.png"> :<span class="name" data-alternative-name="food meat">poultry_leg</span>:</div></li>
+      <li><div><img src="graphics/emojis/poultry_leg.png"> :<span class="name" data-alternative-name="food meat, chicken">poultry_leg</span>:</div></li>
       <li><div><img src="graphics/emojis/meat_on_bone.png"> :<span class="name" data-alternative-name="food meat">meat_on_bone</span>:</div></li>
       <li><div><img src="graphics/emojis/spaghetti.png"> :<span class="name" data-alternative-name="food italian noodles">spaghetti</span>:</div></li>
       <li><div><img src="graphics/emojis/curry.png"> :<span class="name" data-alternative-name="food indian">curry</span>:</div></li>
@@ -657,11 +657,11 @@
       <li><div><img src="graphics/emojis/stew.png"> :<span class="name" data-alternative-name="food">stew</span>:</div></li>
       <li><div><img src="graphics/emojis/oden.png"> :<span class="name" data-alternative-name="food japanese">oden</span>:</div></li>
       <li><div><img src="graphics/emojis/dango.png"> :<span class="name" data-alternative-name="food japanese">dango</span>:</div></li>
-      <li><div><img src="graphics/emojis/egg.png"> :<span class="name" data-alternative-name="food">egg</span>:</div></li>
+      <li><div><img src="graphics/emojis/egg.png"> :<span class="name" data-alternative-name="food, egg, egg white, yolk">egg</span>:</div></li>
       <li><div><img src="graphics/emojis/bread.png"> :<span class="name" data-alternative-name="food">bread</span>:</div></li>
-      <li><div><img src="graphics/emojis/doughnut.png"> :<span class="name" data-alternative-name="food dessert">doughnut</span>:</div></li>
-      <li><div><img src="graphics/emojis/custard.png"> :<span class="name" data-alternative-name="food dessert">custard</span>:</div></li>
-      <li><div><img src="graphics/emojis/icecream.png"> :<span class="name" data-alternative-name="food dessert">icecream</span>:</div></li>
+      <li><div><img src="graphics/emojis/doughnut.png"> :<span class="name" data-alternative-name="food dessert, doughnut, donut">doughnut</span>:</div></li>
+      <li><div><img src="graphics/emojis/custard.png"> :<span class="name" data-alternative-name="food dessert, custard">custard</span>:</div></li>
+      <li><div><img src="graphics/emojis/icecream.png"> :<span class="name" data-alternative-name="food dessert, ice cream, froyo, frozen yogurt">ice cream</span>:</div></li>
       <li><div><img src="graphics/emojis/ice_cream.png"> :<span class="name" data-alternative-name="food dessert">ice_cream</span>:</div></li>
       <li><div><img src="graphics/emojis/shaved_ice.png"> :<span class="name" data-alternative-name="food dessert">shaved_ice</span>:</div></li>
       <li><div><img src="graphics/emojis/birthday.png"> :<span class="name">birthday</span>:</div></li>
