--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Emoji cheat sheet for GitHub, Basecamp and other services</title>
+    <title>Emoji cheat sheet for GitHub, Basecamp and other services.</title>
     <meta charset="utf-8">
     <meta property="og:title" content="Emoji cheat sheet for GitHub, Basecamp and other services">
     <meta property="og:image" content="http://www.emoji-cheat-sheet.com/graphics/emojis/thumbsup.png">
