--- a/public/index.html
+++ b/public/index.html
@@ -1003,7 +1003,7 @@
       <li><div><img src="graphics/emojis/small_red_triangle_down.png"> :<span class="name">small_red_triangle_down</span>:</div></li>
       <li><div><img src="graphics/emojis/shipit.png"> :<span class="name">shipit</span>:</div></li>
     </ul>
-    <h3>Campfire also supports a few sounds</h3>
+    <h3>Campfire also supports a few sounds.</h3>
     <ul id="campfire-sounds">
       <li><div data-sound="secret">/play secret</div></li>
       <li><div data-sound="trombone">/play trombone</div></li>
