Add synonym for eyes: eye-rolling

--- a/public/index.html
+++ b/public/index.html
@@ -287,7 +287,7 @@
       <li><div><img src="graphics/emojis/kiss.png"> :<span class="name">kiss</span>:</div></li>
       <li><div><img src="graphics/emojis/droplet.png"> :<span class="name" data-alternative-name="water">droplet</span>:</div></li>
       <li><div><img src="graphics/emojis/ear.png"> :<span class="name">ear</span>:</div></li>
-      <li><div><img src="graphics/emojis/eyes.png"> :<span class="name">eyes</span>:</div></li>
+      <li><div><img src="graphics/emojis/eyes.png"> :<span class="name" data-alternative-name="eye-rolling">eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/nose.png"> :<span class="name">nose</span>:</div></li>
       <li><div><img src="graphics/emojis/tongue.png"> :<span class="name">tongue</span>:</div></li>
       <li><div><img src="graphics/emojis/love_letter.png"> :<span class="name">love_letter</span>:</div></li>
