added alternative name for trophy

--- a/public/index.html
+++ b/public/index.html
@@ -543,7 +543,7 @@
       <li><div><img src="graphics/emojis/pushpin.png"> :<span class="name">pushpin</span>:</div></li>
       <li><div><img src="graphics/emojis/paperclip.png"> :<span class="name">paperclip</span>:</div></li>
       <li><div><img src="graphics/emojis/black_nib.png"> :<span class="name">black_nib</span>:</div></li>
-      <li><div><img src="graphics/emojis/pencil2.png"> :<span class="name">pencil2</span>:</div></li>
+      <li><div><img src="graphics/emojis/pencil2.png"> :<span class="name" data-alternative-name="pencil">pencil2</span>:</div></li>
       <li><div><img src="graphics/emojis/straight_ruler.png"> :<span class="name">straight_ruler</span>:</div></li>
       <li><div><img src="graphics/emojis/triangular_ruler.png"> :<span class="name">triangular_ruler</span>:</div></li>
       <li><div><img src="graphics/emojis/closed_book.png"> :<span class="name">closed_book</span>:</div></li>
@@ -561,7 +561,7 @@
       <li><div><img src="graphics/emojis/newspaper.png"> :<span class="name">newspaper</span>:</div></li>
       <li><div><img src="graphics/emojis/football.png"> :<span class="name" data-alternative-name="sport">football</span>:</div></li>
       <li><div><img src="graphics/emojis/basketball.png"> :<span class="name" data-alternative-name="sport">basketball</span>:</div></li>
-      <li><div><img src="graphics/emojis/soccer.png"> :<span class="name" data-alternative-name="sport">soccer</span>:</div></li>
+      <li><div><img src="graphics/emojis/soccer.png"> :<span class="name" data-alternative-name="sport, football">soccer</span>:</div></li>
       <li><div><img src="graphics/emojis/baseball.png"> :<span class="name" data-alternative-name="sport">baseball</span>:</div></li>
       <li><div><img src="graphics/emojis/tennis.png"> :<span class="name" data-alternative-name="sport">tennis</span>:</div></li>
       <li><div><img src="graphics/emojis/8ball.png"> :<span class="name" data-alternative-name="sport">8ball</span>:</div></li>
@@ -582,7 +582,7 @@
       <li><div><img src="graphics/emojis/diamonds.png"> :<span class="name" data-alternative-name="cards, suit">diamonds</span>:</div></li>
       <li><div><img src="graphics/emojis/gem.png"> :<span class="name">gem</span>:</div></li>
       <li><div><img src="graphics/emojis/ring.png"> :<span class="name">ring</span>:</div></li>
-      <li><div><img src="graphics/emojis/trophy.png"> :<span class="name">trophy</span>:</div></li>
+      <li><div><img src="graphics/emojis/trophy.png"> :<span class="name" data-alternative-name="win">trophy</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_score.png"> :<span class="name">musical_score</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_keyboard.png"> :<span class="name">musical_keyboard</span>:</div></li>
       <li><div><img src="graphics/emojis/violin.png"> :<span class="name">violin</span>:</div></li>
