added alternative name for house

--- a/public/index.html
+++ b/public/index.html
@@ -691,7 +691,7 @@
     </ul>
     <h2>Places</h2>
     <ul class="places emojis" id="emoji-places">
-      <li><div><img src="graphics/emojis/house.png"> :<span class="name">house</span>:</div></li>
+      <li><div><img src="graphics/emojis/house.png"> :<span class="name" data-alternative-name="home">house</span>:</div></li>
       <li><div><img src="graphics/emojis/house_with_garden.png"> :<span class="name">house_with_garden</span>:</div></li>
       <li><div><img src="graphics/emojis/school.png"> :<span class="name">school</span>:</div></li>
       <li><div><img src="graphics/emojis/office.png"> :<span class="name">office</span>:</div></li>
