--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
       <li><div><img src="graphics/emojis/disappointed.png"> :<span class="name" data-alternative-name="sad, lonely">disappointed</span>:</div></li>
       <li><div><img src="graphics/emojis/confounded.png"> :<span class="name">confounded</span>:</div></li>
       <li><div><img src="graphics/emojis/fearful.png"> :<span class="name" data-alternative-name="scared, afraid">fearful</span>:</div></li>
-      <li><div><img src="graphics/emojis/cold_sweat.png"> :<span class="name">cold_sweat</span>:</div></li>
+      <li><div><img src="graphics/emojis/cold_sweat.png"> :<span class="name"data-alternative-name= "scared, frightened">cold_sweat</span>:</div></li>
       <li><div><img src="graphics/emojis/persevere.png"> :<span class="name">persevere</span>:</div></li>
       <li><div><img src="graphics/emojis/cry.png"> :<span class="name" data-alternative-name="sad, unhappy">cry</span>:</div></li>
       <li><div><img src="graphics/emojis/sob.png"> :<span class="name" data-alternative-name="sad, unhappy">sob</span>:</div></li>
