--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
       <li><div><img src="graphics/emojis/sweat.png"> :<span class="name" data-alternative-name="worried, stressed">sweat</span>:</div></li>
       <li><div><img src="graphics/emojis/disappointed_relieved.png"> :<span class="name">disappointed_relieved</span>:</div></li>
       <li><div><img src="graphics/emojis/weary.png"> :<span class="name">weary</span>:</div></li>
-      <li><div><img src="graphics/emojis/pensive.png"> :<span class="name">pensive</span>:</div></li>
+      <li><div><img src="graphics/emojis/pensive.png"> :<span class="name" data-alternative-name="reflective, recounting">pensive</span>:</div></li>
       <li><div><img src="graphics/emojis/disappointed.png"> :<span class="name" data-alternative-name="sad, lonely">disappointed</span>:</div></li>
       <li><div><img src="graphics/emojis/confounded.png"> :<span class="name">confounded</span>:</div></li>
       <li><div><img src="graphics/emojis/fearful.png"> :<span class="name" data-alternative-name="scared, afraid">fearful</span>:</div></li>
