--- a/public/index.html
+++ b/public/index.html
@@ -1073,6 +1073,7 @@
       </p>
     </div>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="script.js?6"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.2.0/ZeroClipboard.min.js"></script>
+    <script src="script.js?7"></script>
   </body>
 </html>
