Copy copy & cache invalidator

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-    <link href="style.css?7" rel="stylesheet">
+    <link href="style.css?8" rel="stylesheet">
     <script type="text/javascript">
       // http://mths.be/aab
       var _gaq = [['_setAccount', 'UA-20637790-4'], ['_trackPageview']];
@@ -98,8 +98,7 @@
 
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
-      &#x2708; <b>Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b><br>
-      &#x2728; <b>Got Firefox 41, Chrome 43 or newer? Click the emoji code and it will be copied to your clipboard even without Flash.</b>
+      &#x2708; <b>Got a modern browser or flash enabled? Click the emoji code and it will be copied to your clipboard.</b>
     </p>
 
     <div id="share">
