Flash is a name

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
 
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
-      &#x2708; <b>Got a modern browser or flash enabled? Click the emoji code and it will be copied to your clipboard.</b>
+      &#x2708; <b>Got a modern browser or Flash enabled? Click the emoji code and it will be copied to your clipboard.</b>
     </p>
 
     <div id="share">
