--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,7 @@
       <a href="https://usersnap.com">Usersnap</a>,
       <a href="https://discordapp.com/">Discord</a>,
       <a href="https://statushero.com/">Status Hero</a>,
+      <a href="http://morfy.org/">Morfy</a>,
       <a href="https://bitbucket.org/">Bitbucket</a>,
       and <a href="https://gitter.im/">Gitter</a>.
     </p>
