--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,7 @@
       <a href="https://usersnap.com">Usersnap</a>,
       <a href="https://discordapp.com/">Discord</a>,
       <a href="https://statushero.com/">Status Hero</a>,
+      <a href="http://www.mattermost.org/">Mattermost</a>,
       <a href="http://morfy.org/">Morfy</a>,
       <a href="https://bitbucket.org/">Bitbucket</a>,
       <a href="https://gitter.im/">Gitter</a>,
